[gd_scene load_steps=6 format=2]

[ext_resource path="res://prefabs/enemies/ProtoEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefabs/PlayerActor.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefabs/World.gd" type="Script" id=3]
[ext_resource path="res://prefabs/Sector.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/enemies/GamaEnemy.tscn" type="PackedScene" id=5]

[node name="World" type="Node2D"]
script = ExtResource( 3 )
entry_sector = ExtResource( 4 )
player_actor = ExtResource( 2 )

[node name="GameView" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="DialogView" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="TutorialView" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Enemy" parent="TutorialView" instance=ExtResource( 5 )]
position = Vector2( 104.655, -47.3452 )
rotation = -0.734784
freeze = true

[node name="Enemy2" parent="TutorialView" instance=ExtResource( 1 )]
position = Vector2( 33.6549, -91.3451 )
rotation = 0.18326
freeze = true
